--- a/styles.css
+++ b/styles.css
@@ -90,12 +90,13 @@ a.active {
   transition: height 0.5s ease-in-out;
 }
 
-.sharebtn.icon {
+.icon {
     display: block;
     position: absolute;
     right: 1rem;
     top: 50%;
     transform: translateY(-50%);
+    cursor: pointer;
 }
 
 #playIcon:hover {
